[project]
authors = [
    { name = "Federico Jaramillo Martinez", email = "federicojaramillom@gmail.com" },
]
license = { text = "BSD-3-Clause" }
dependencies = ["Jinja2>=2.0", "django>=1.11"]
name = "jinja2-django-version"
version = "1.1.3.dev0"
description = "A Jinja2 extension that adds django version to templates."
readme = "README.rst"
keywords = ["jinja2", "extension", "django", "versions"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Natural Language :: English",
]

[project.urls]
homepage = "https://github.com/jmfederico/jinja2-django-version"
repository = "https://github.com/jmfederico/jinja2-django-version"

[tool.pdm]

[tool.pdm.build]
includes = ['jinja2_django_version']

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
